update lien + ajout modern rock

--- a/web-api-auth-examples/authorization_code/public/genres/index.html
+++ b/web-api-auth-examples/authorization_code/public/genres/index.html
@@ -218,6 +218,8 @@
 
 
           //////////////////////////C'est plus dynamique à partir d'ici //////////////////////////
+
+          /////////////////////////french hip hop/////////////////////////////
           // let frenchhiphop = [];
           // genres.forEach((item, i) => {
           //   if (item.split('/-/')[2] == 'french hip hop')
@@ -257,6 +259,7 @@
           //   });
           // }
 
+          ///////////////// new french touch /////////////////////
           // let frenchhiphop = [];
           // genres.forEach((item, i) => {
           //   if (item.split('/-/')[2] == 'new french touch')
@@ -295,6 +298,49 @@
           //     }
           //   });
           // }
+
+
+          ///////////modern rock////////////////////////
+          // let frenchhiphop = [];
+          // genres.forEach((item, i) => {
+          //   if (item.split('/-/')[2] == 'modern rock')
+          //     frenchhiphop.push(item.split('/-/')[3]);
+          // });
+          //
+          // console.log(frenchhiphop);
+          // console.log(Math.trunc(frenchhiphop.length/100)+1);
+          // for (var a = 0; a < Math.trunc(frenchhiphop.length/100)+1; a++) {
+          //   offset = a*100;
+          //   uris = '';
+          //
+          //   for (var b = 0; b < 100; b++) {
+          //     if (frenchhiphop[b+offset]) {
+          //       uris = uris+frenchhiphop[b+offset];
+          //       if (b != 99 && frenchhiphop[b+offset+1] )
+          //         uris = uris+',';
+          //     }
+          //   }+
+          //   console.log(uris);
+          //   $.ajax({
+          //     url: 'https://api.spotify.com/v1/playlists/3g9VmhWfod0nyTcR5RzCHo/tracks?uris='+uris,
+          //     headers: {
+          //       'Accept': 'application/json',
+          //       'Content-Type': 'application/json',
+          //       'Authorization': 'Bearer ' + token
+          //     },
+          //     type: 'POST',
+          //     dataType : 'json',
+          //     success : function(data, statut) {
+          //       console.log(data);
+          //       console.log(statut);
+          //
+          //     },
+          //     error : function(resultat, statut, err) {
+          //       console.log(err)
+          //     }
+          //   });
+          // }
+
 
 
         }, 2000)
