--- a/web-api-auth-examples/authorization_code/public/Queue/index.html
+++ b/web-api-auth-examples/authorization_code/public/Queue/index.html
@@ -6,7 +6,7 @@
 	  <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
   </head>
   <body>
-
+    <h1>marche pô... pour linstant ;)</h1>
 
   </body>
 </html>
